Fixed issues on sermon notes fields on mobile view

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -352,7 +352,7 @@ a,input,textarea,button {
 			position: relative;
     		bottom: 2px;
     		&:before {
-				content: "click here";
+				content: "Tap Here";
 				display: block;
 				font-size: 12px;
 				text-align: center;
